--- a/weather-station.yaml
+++ b/weather-station.yaml
@@ -14,7 +14,7 @@ esphome:
     - GP2Y1010AU0F.h
 
 dashboard_import:
-  package_import_url: github://l7ssha/esphome/weather-station.yaml
+  package_import_url: github://l7ssha/esphome/weather-station.yaml@main
   import_full_config: false
 
 esp32:
@@ -25,22 +25,14 @@ esp32:
 logger:
 
 api:
-  password: !secret api_password
 
 ota:
-  password: !secret ota_password
 
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
-  manual_ip:
-    static_ip: 192.168.0.17
-    gateway: 192.168.0.1
-    subnet: 255.255.255.0
   power_save_mode: none
   ap:
-    ssid: "Test Fallback Hotspot"
-    password: "l7NH9oRIZEjm"
+    ssid: "${name} Hotspot"
+    password: "${name}"
 
 captive_portal:
 
@@ -140,12 +132,6 @@ sensor:
     name: Uptime
     entity_category: "diagnostic"
 
-switch:
-  - platform: gpio
-    pin: 19
-    name: "PM2.5 Dust Sensor LED"
-    entity_category: "config"
-
 button:
   - platform: factory_reset
     name: "Restart with Factory Default Settings"
@@ -163,4 +149,3 @@ text_sensor:
       name: "Connected SSID"
     mac_address:
       name: "Mac Address"
-    entity_category: "diagnostic" 
