--- a/weather-station.yaml
+++ b/weather-station.yaml
@@ -14,10 +14,7 @@ esphome:
     - GP2Y1010AU0F.h
 
 dashboard_import:
-  package_import_url:
-    url: https://github.com/l7ssha/esphome
-    ref: main 
-    file: weather-station.yaml
+  package_import_url: github://l7ssha/esphome/weather-station.yaml@main
   import_full_config: false
 
 esp32:
@@ -28,8 +25,10 @@ esp32:
 logger:
 
 api:
+  password: !secret api_password
 
 ota:
+  password: !secret ota_password
 
 wifi:
   power_save_mode: none
