--- a/desk-v2.yaml
+++ b/desk-v2.yaml
@@ -30,11 +30,12 @@ esp32:
     type: arduino
 
 wifi:
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
   power_save_mode: none
   ap:
     ssid: "${name} Hotspot"
     password: "${name}"
-
 
 captive_portal:
 
@@ -56,14 +57,7 @@ uart:
     tx_pin: 3
     rx_pin: 21
 
-sensor:
-  - platform: wifi_signal
-    name: "WiFi Signal"
-    update_interval: 60s
-
-  - platform: uptime
-    name: Uptime
-  
+sensor:  
   - platform: custom
     lambda: |-
       auto desk_height_sensor = new DeskHeightSensor(id(desk_uart));
@@ -133,6 +127,15 @@ sensor:
             else if (state == 6) {
               id(button_m).press();
             }
+
+  - platform: wifi_signal
+    name: "WiFi Signal"
+    update_interval: 60s
+    entity_category: "diagnostic"
+
+  - platform: uptime
+    name: Uptime
+    entity_category: "diagnostic"
               
 switch:
   - platform: gpio
@@ -141,7 +144,6 @@ switch:
       number: GPIO23
       mode: OUTPUT
     restore_mode: ALWAYS_ON
-    entity_category: "config"
     internal: true
 
   - platform: uart
@@ -170,7 +172,6 @@ switch:
     on_turn_on:
       - delay: 3000ms
       - switch.turn_off: switch_alarm
-    entity_category: "config"
 
   - platform: uart
     name: "Child Lock"
@@ -182,7 +183,6 @@ switch:
     on_turn_on:
       - delay: 5000ms
       - switch.turn_off: switch_child_lock
-    entity_category: "config"
 
 button:
   - platform: template
@@ -225,7 +225,6 @@ button:
     name: "Memory"
     id: button_m
     icon: mdi:alpha-m-box
-    entity_category: "config"
     on_press:
       - uart.write:
           id: desk_uart
@@ -235,7 +234,6 @@ button:
     name: "Wake Screen"
     id: button_wake_screen
     icon: mdi:gesture-tap-button
-    entity_category: "config"
     on_press:
       - uart.write:
           id: desk_uart
@@ -249,10 +247,6 @@ button:
       - uart.write:
           id: desk_uart
           data: [0x9b, 0x06, 0x02, 0x40, 0x00, 0xAC, 0x90, 0x9d]
-
-  - platform: restart
-    name: "Restart"
-    entity_category: "config"
 
   - platform: template
     name: "Up Button"
@@ -271,6 +265,10 @@ button:
       - uart.write:
           id: desk_uart
           data: [0x9b, 0x06, 0x02, 0x02, 0x00, 0x0c, 0xa0, 0x9d]
+  
+  - platform: restart
+    name: "Restart"
+    entity_category: "config"
 
 cover:
   - platform: template
