--- a/weather-station.yaml
+++ b/weather-station.yaml
@@ -31,6 +31,8 @@ ota:
   password: !secret ota_password
 
 wifi:
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
   power_save_mode: none
   ap:
     ssid: "${name} Hotspot"
