--- a/weather-station.yaml
+++ b/weather-station.yaml
@@ -8,11 +8,11 @@ esphome:
   friendly_name: ${device_name}
   name_add_mac_suffix: true
   project:
-    name: l7ssha.weather-station
+    name: "l7ssha.weather-station"
     version: "1.0"
 
 dashboard_import:
-  package_import_url: github://l7ssha/esphome/weather-station.yaml@main
+  package_import_url: github://l7ssha/esphome/weather-station.yaml
   import_full_config: false
 
 esp32:
@@ -23,14 +23,10 @@ esp32:
 logger:
 
 api:
-  password: !secret api_password
 
 ota:
-  password: !secret ota_password
 
 wifi:
-  ssid: !secret wifi_ssid
-  password: !secret wifi_password
   power_save_mode: none
   ap:
     ssid: "${name} Hotspot"
