--- a/pc-led.yaml
+++ b/pc-led.yaml
@@ -12,7 +12,7 @@ esphome:
     version: "1.0"
 
 dashboard_import:
-  package_import_url: github://l7ssha/esphome/pc-led.yaml
+  package_import_url: github://l7ssha/esphome/pc-led.yaml@2fc1e1d
   import_full_config: false
 
 esp32:
