--- a/weather-station.yaml
+++ b/weather-station.yaml
@@ -9,7 +9,7 @@ esphome:
   name_add_mac_suffix: true
   project:
     name: "l7ssha.weather-station"
-    version: "1.0"
+    version: "2.0"
 
 dashboard_import:
   package_import_url: github://l7ssha/esphome/weather-station.yaml
@@ -43,37 +43,38 @@ sensor:
     pin: GPIO5
     model: DHT22
     temperature:
-      name: "Outside Temperature DHT22"
+      name: "DHT22 Temperature"
       accuracy_decimals: 2
-      id: air_temperature
+      id: dht_temp
     humidity:
-      name: "Outside Humidity"
+      name: "DHT22 Humidity"
       accuracy_decimals: 2
-      id: relative_humidity
+      id: dht_humidity
     update_interval: 60s
 
   - platform: dps310
     temperature:
-      name: "Outside Temperature DPS310"
+      name: "DPS310 Temperature"
       accuracy_decimals: 2
+      id: dps310_temp
     pressure:
-      name: "Outside Pressure"
+      name: "DPS310 Pressure"
       accuracy_decimals: 2
-      id: air_pressure
-    address: 0x77
+      id: dps310_pressure
+    address: 0x76
     update_interval: 60s
 
   - platform: absolute_humidity
     name: Outside Absolute Humidity
-    temperature: air_temperature
-    humidity: relative_humidity
+    temperature: package_temperature
+    humidity: package_relative_humidity
 
   - platform: template
     name: "Dew Point"
     lambda: |-
-      return (243.5*(log(id(relative_humidity).state/100)+((17.67*id(air_temperature).state)/
-      (243.5+id(air_temperature).state)))/(17.67-log(id(relative_humidity).state/100)-
-      ((17.67*id(air_temperature).state)/(243.5+id(air_temperature).state))));
+      return (243.5*(log(id(package_relative_humidity).state/100)+((17.67*id(package_temperature).state)/
+      (243.5+id(package_temperature).state)))/(17.67-log(id(package_relative_humidity).state/100)-
+      ((17.67*id(package_temperature).state)/(243.5+id(package_temperature).state))));
     unit_of_measurement: °C
     icon: 'mdi:thermometer-alert'
     accuracy_decimals: 2
@@ -83,8 +84,8 @@ sensor:
     name: "Equivalent sea level pressure"
     lambda: |-
       const float STANDARD_ALTITUDE = 195; // in meters, see note
-      return id(air_pressure).state / powf(1 - ((0.0065 * STANDARD_ALTITUDE) /
-        (id(air_pressure).state + (0.0065 * STANDARD_ALTITUDE) + 273.15)), 5.257); // in hPa
+      return id(package_pressure).state / powf(1 - ((0.0065 * STANDARD_ALTITUDE) /
+        (id(package_pressure).state + (0.0065 * STANDARD_ALTITUDE) + 273.15)), 5.257); // in hPa
     update_interval: 60s
     unit_of_measurement: 'hPa'
     accuracy_decimals: 2
@@ -103,8 +104,8 @@ sensor:
       const float c8 = 0.0007;
       const float c9 = -0.000003;
 
-      float temp = id(air_temperature).state;
-      float rh = id(relative_humidity).state / 100;
+      float temp = id(package_temperature).state;
+      float rh = id(package_relative_humidity).state / 100;
 
       return c1 + (c2 * temp) + (c3 * rh) + (c4 * temp * rh) + (c5 * temp * temp) + (c6 * rh * rh) + (c7 * temp * temp * rh) + (c8 * rh * rh * temp) + (c9 * rh * rh * temp * temp);
     update_interval: 60s
@@ -130,6 +131,64 @@ sensor:
     actual_gain:
       id: "actual_gain"
       name: "TSL2591 actual gain"
+
+  - platform: bme680
+    temperature:
+      name: "BME680 Temperature"
+      oversampling: 16x
+      id: bme680_temp
+    pressure:
+      name: "BME680 Pressure"
+      id: bme680_pressure
+    humidity:
+      name: "BME680 Humidity"
+      id: bme680_humidity
+    gas_resistance:
+      id: "gas_resistance"
+      name: "BME680 Gas Resistance"
+    address: 0x77
+    update_interval: 60s
+
+  - platform: template
+    name: "BME680 Indoor Air Quality"
+    id: iaq
+    icon: "mdi:gauge"
+    lambda: |-
+      return log(id(gas_resistance).state) + 0.04 *  id(package_relative_humidity).state;
+
+  - platform: template
+    name: "Package Temperature"
+    id: package_temperature
+    unit_of_measurement: "°C"
+    icon: "mdi:thermometer-lines"
+    lambda: |-
+      return (
+        id(dht_temp).state +
+        id(dps310_temp).state +
+        id(bme680_temp).state
+      ) / 3;
+
+  - platform: template
+    name: "Package Relative Humidity"
+    unit_of_measurement: "%"
+    id: package_relative_humidity
+    icon: "mdi:cloud-percent-outline"
+    lambda: |-
+      return (
+        id(dht_humidity).state +
+        id(bme680_humidity).state
+      ) / 2;
+      
+  - platform: template
+    name: "Package Pressure"
+    unit_of_measurement: "hPa"
+    icon: "mdi:gauge-full"
+    id: package_pressure
+    lambda: |-
+      return (
+        id(dps310_pressure).state +
+        id(bme680_pressure).state
+      ) / 2;
 
   - platform: wifi_signal
     name: "WiFi Signal"
@@ -157,3 +216,32 @@ text_sensor:
       name: "Connected SSID"
     mac_address:
       name: "Mac Address"
+  
+  - platform: template
+    name: "BME680 IAQ Classification"
+    icon: "mdi:checkbox-marked-circle-outline"
+    lambda: |-
+      if (int(id(iaq).state) <= 50) {
+        return {"Excellent"};
+      }
+      else if (int(id(iaq).state) <= 100) {
+        return {"Good"};
+      }
+      else if (int(id(iaq).state) <= 150) {
+        return {"Lightly polluted"};
+      }
+      else if (int(id(iaq).state) <= 200) {
+        return {"Moderately polluted"};
+      }
+      else if (int(id(iaq).state) <= 250) {
+        return {"Heavily polluted"};
+      }
+      else if (int(id(iaq).state) <= 350) {
+        return {"Severely polluted"};
+      }
+      else if (int(id(iaq).state) <= 500) {
+        return {"Extremely polluted"};
+      }
+      else {
+        return {"unknown"};
+      }
